--- a/view.css
+++ b/view.css
@@ -9,15 +9,15 @@ nav ul {
   padding: 0;
   display: flex;
   justify-content: center;
-  gap: 1rem; /* spacing between items */
+  gap: 1rem; 
 }
 
 nav ul li a {
-  text-decoration: none;       /* removes underline */
-  color: #333;                 /* text color */
-  background-color: #f5f5f5;   /* button background */
-  padding: 0.5rem 1rem;        /* space inside button */
-  border-radius: 6px;          /* rounded corners */
+  text-decoration: none;
+  color: #333;
+  background-color: #f5f5f5;
+  padding: 0.5rem 1rem;
+  border-radius: 6px;
   transition: background 0.3s, color 0.3s;
 }
 
@@ -34,9 +34,11 @@ body {
     color: F5F5F5;
 }
 footer   {
-    background-color: 4A4A4A;
-    text-align: center;
-    position: fixed;
-    bottom: 0;
+background-color: #4A4A4A;
+  color: #ffffff;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 
 }
